--- a/introduccion.lyx
+++ b/introduccion.lyx
@@ -113,7 +113,7 @@ Uno de los principales problemas presentes en aplicaciones relativas a robots
 
 \begin_layout Standard
 El problema de construir incrementalmente un mapa del entorno mientras,
- simultáneamente, la ubicación del robot es estimada es conocido como SLAM
+ simultáneamente, la ubicación del robot se estima es conocido como SLAM
  (
 \emph on
 Simultaneous Localization and Mapping
@@ -130,9 +130,9 @@ key "durrant2006simultaneous,bailey2006simultaneous"
 
 \begin_layout Standard
 En la última década, ha habido un creciente interés en sistemas de SLAM
- visual, que utilizan cámaras como sensor principal.
- Las cámaras proveen una rica información de la escena observada y presentan
- importantes ventajas: bajo costo, menor consumo energético –-en comparación
+ visual que utilizan cámaras como sensor principal.
+ Las cámaras proveen información detallada de la escena observada y presentan
+ importantes ventajas: bajo costo, menor consumo energético —en comparación
  con otros sensores, como lásers—, portabilidad y alta disponibilidad en
  dispositivos móviles.
  Además, las cámaras son sensores pasivos por lo que no interfieren con
@@ -142,9 +142,9 @@ En la última década, ha habido un creciente interés en sistemas de SLAM
 Global Positioning System
 \emph default
 ) no es posible.
- Asímismo, son menos restrictivos que los encoders, los cuales se encuentran
- limitados a robots terrestres y son altamente imprecisos en terrenos irregulare
-s.
+ Así mismo, son menos restrictivos que los encoders, los cuales se encuentran
+ limitados a robots terrestres y son considerablemente imprecisos en terrenos
+ irregulares.
 \end_layout
 
 \begin_layout Standard
@@ -175,9 +175,14 @@ key "Mouragnon2006,Hwang2011"
 
 .
  Además, la reconstrucción 3D que se puede estimar con un sistema monocular
- se encuentra perturbada
+ se encuentra a un factor de escala desconocido, mientras que la obtenida
+ por un sistema estéreo se encuentra a escala real (debido a que se conoce
+ el desplazamiento que existe entre ambas cámaras).
+\end_layout
+
+\begin_layout Standard
 \begin_inset Note Comment
-status open
+status collapsed
 
 \begin_layout Plain Layout
 Otra palabra que no sea perturbada.
@@ -186,9 +191,7 @@ Otra palabra que no sea perturbada.
 
 \end_inset
 
- por un factor de escala, mientras que la reconstrucción obtenida por un
- sistema estéreo se encuentra a escala real (debido a que se conoce el desplazam
-iento que existe entre ambas cámaras).
+
 \end_layout
 
 \begin_layout Standard
@@ -231,9 +234,16 @@ key "pire2015"
  Dada la localización del robot estimada por S-PTAM, una reconstrucción
  3D completa es computada paralelamente por el módulo de densificación.
  Si bien nuestro trabajo se implementó sobre este sistema, puede ser empleado
- sobre otras implementaciones de SLAM 
+ sobre otras implementaciones de SLAM estéreo basados en 
+\emph on
+keyframes
+\emph default
+.
+\end_layout
+
+\begin_layout Standard
 \begin_inset Note Comment
-status open
+status collapsed
 
 \begin_layout Plain Layout
 que sean keyfram-based y que funcionen con camara estéreo
@@ -241,7 +251,7 @@ que sean keyfram-based y que funcionen con camara estéreo
 
 \end_inset
 
-.
+
 \end_layout
 
 \begin_layout Standard
@@ -260,19 +270,9 @@ os para generar una nube de puntos tridimensional local.
  Transformamos la nube de puntos local usando la posición global proveniente
  del sistema de SLAM subyacente, refinando continuamente las nubes de puntos
  locales a lo largo de todo el proceso.
- Cada nube de puntos local es filtrada previamente —
-\begin_inset Note Comment
-status open
-
-\begin_layout Plain Layout
-se tienen que poner 3 guiones para que se ve el guion largo adecuado en
- el pdf.
-\end_layout
-
-\end_inset
-
-por medio de fusión de puntos redundantes y detección de outliers— empleando
- un método similar al propuesto en 
+ Cada nube de puntos local es filtrada previamente —por medio de fusión
+ de puntos redundantes y detección de outliers— empleando un método similar
+ al propuesto en 
 \begin_inset CommandInset citation
 LatexCommand cite
 key "geiger2011stereoscan"
@@ -283,9 +283,38 @@ key "geiger2011stereoscan"
 \end_layout
 
 \begin_layout Standard
-Finalmente, el método desarrollado se integró
 \begin_inset Note Comment
-status open
+status collapsed
+
+\begin_layout Plain Layout
+se tienen que poner 3 guiones para que se ve el guion largo adecuado en
+ el pdf.
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Finalmente, el método desarrollado se programó como un nodo del framework
+ ROS (
+\emph on
+Robot Operating System
+\emph default
+) para ser ejecutado en paralelo y conjuntamente con el sistema S-PTAM,
+ del que se obtienen las poses globales.
+ Haremos referencia al sistema propuesto en esta tesina como S-PTAM Denso.
+ Los experimentos realizados sobre datasets de dominio público muestran
+ que el sistema es apto para generar en tiempo real una reconstrucción densa,
+ sin requerir el uso de GPUs, con precisión similar a otros métodos de densifica
+ción presentes en el estado del arte.
+ 
+\end_layout
+
+\begin_layout Standard
+\begin_inset Note Comment
+status collapsed
 
 \begin_layout Plain Layout
 Se programó bajo el framework de ROS
@@ -293,22 +322,7 @@ Se programó bajo el framework de ROS
 
 \end_inset
 
- al framework ROS (
-\emph on
-Robot Operating System
-\emph default
-) para ser ejecutado en paralelo y conjuntamente con el sistema S-PTAM,
- del que se obtienen las poses globales.
- Haremos referencia al sistema propuesto en esta tesina como 
-\emph on
-S-PTAM Denso
-\emph default
-.
- Los experimentos realizados sobre datasets de dominio público muestran
- que el sistema es apto para generar en tiempo real una reconstrucción densa,
- sin requerir el uso de GPUs, con precisión similar a otros métodos de densifica
-ción presentes en el estado del arte.
- 
+
 \end_layout
 
 \begin_layout Section
@@ -320,17 +334,8 @@ El capítulo 2 presenta el estado del arte en sistemas SLAM densos.
  En el mismo se comentan los distintos paradigmas para abordar la reconstrucción
  3D o mapeo denso en sistemas (SLAM), y se analizan los métodos más relevantes
  de la literatura.
- En el capítulo 3 se presentan los fundamentos básicos 
-\begin_inset Note Comment
-status open
-
-\begin_layout Plain Layout
-fundamentos de visión y robótica?
-\end_layout
-
-\end_inset
-
-utilizados a lo largo de toda la tesina.
+ En el capítulo 3 se presentan los fundamentos básicos de visión y robótica
+ utilizados a lo largo de toda la tesina.
  En el capítulo 4 se detalla el método de SLAM denso desarrollado.
  En el capítulo 5 se evalúa S-PTAM Denso en datasets de dominio público
  y se discuten los resultados obtenidos.
@@ -340,16 +345,52 @@ utilizados a lo largo de toda la tesina.
 
 \begin_layout Standard
 \begin_inset Note Comment
-status open
+status collapsed
 
 \begin_layout Plain Layout
-Decir que el trabajo de la tesina fue publicado en la JAR.
- Poner todos los datos de la publicación.
+fundamentos de visión y robótica?
 \end_layout
 
 \end_inset
 
 
+\end_layout
+
+\begin_layout Section
+Publicaciones
+\end_layout
+
+\begin_layout Standard
+Publicaciones relevantes de la tesina:
+\end_layout
+
+\begin_layout Itemize
+A.
+ D'Alessandro, T.
+ Pire, R.
+ Baravalle: 
+\series bold
+Hacia una densificación de sistemas SLAM dispersos basados en visión estéreo
+\series default
+.
+ En IX Jornadas Argentinas de Robótica (JAR) 2017.
+ 15, 16 y 17 de Noviembre de 2017.
+ Facultad Regional Córdoba, Córdoba, Universidad Tecnológica Nacional.
+ Noviembre 2017.
+\end_layout
+
+\begin_layout Itemize
+T.
+ Pire, R.
+ Baravalle, A.
+ D'Alessandro, J.
+ Civera: 
+\series bold
+Real-time and Locally Dense Stereo SLAM
+\series default
+.
+ En Robotics and Autonomous Systems (RAS).
+ (En revisión).
 \end_layout
 
 \end_body
